Arrumando a estilização com personalização

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -2,8 +2,8 @@
 $font-family-sans-serif: 'Open Sans', sans-serif;
 
 // colors
-$primary: #c167ef;
-$secondary: #10bcee;
+$primary: #200752;
+$secondary: #EAB00b;
 $dark: #2b3041;
 $light: #f3f6f9;
 
