Inserindo modal do bootstrap

--- a/pages/Estoque/styles.css
+++ b/pages/Estoque/styles.css
@@ -1,4 +1,4 @@
-.modal {
+/* .modal {
     position: absolute;
     top: 0;
     left: 0;
@@ -14,4 +14,4 @@
 .modal-box {
     background-color: #fff;
 }
-
+ */
