--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -2,7 +2,7 @@
 $font-family-sans-serif: 'Open Sans', sans-serif;
 
 // colors
-$primary: #200752;
+$primary: lightblue;
 $secondary: #EAB00b;
 $dark: #2b3041;
 $light: #f3f6f9;
