Criando toast para informar ao usuário que a ação foi realizada com sucesso

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -2,7 +2,7 @@
 $font-family-sans-serif: 'Open Sans', sans-serif;
 
 // colors
-$primary: lightblue;
+$primary: #0050DC;
 $secondary: #EAB00b;
 $dark: #2b3041;
 $light: #f3f6f9;
