--- a/styles/custom.css
+++ b/styles/custom.css
@@ -29,7 +29,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: lightblue;
+  --bs-primary: #0050DC;
   --bs-secondary: #EAB00b;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -37,7 +37,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f3f6f9;
   --bs-dark: #2b3041;
-  --bs-primary-rgb: 173, 216, 230;
+  --bs-primary-rgb: 0, 80, 220;
   --bs-secondary-rgb: 234, 176, 11;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -45,7 +45,7 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 243, 246, 249;
   --bs-dark-rgb: 43, 48, 65;
-  --bs-primary-text-emphasis: #45565c;
+  --bs-primary-text-emphasis: #002058;
   --bs-secondary-text-emphasis: #5e4604;
   --bs-success-text-emphasis: #0a3622;
   --bs-info-text-emphasis: #055160;
@@ -53,7 +53,7 @@
   --bs-danger-text-emphasis: #58151c;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
-  --bs-primary-bg-subtle: #eff7fa;
+  --bs-primary-bg-subtle: #ccdcf8;
   --bs-secondary-bg-subtle: #fbefce;
   --bs-success-bg-subtle: #d1e7dd;
   --bs-info-bg-subtle: #cff4fc;
@@ -61,7 +61,7 @@
   --bs-danger-bg-subtle: #f8d7da;
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
-  --bs-primary-border-subtle: #deeff5;
+  --bs-primary-border-subtle: #99b9f1;
   --bs-secondary-border-subtle: #f7df9d;
   --bs-success-border-subtle: #a3cfbb;
   --bs-info-border-subtle: #9eeaf9;
@@ -93,11 +93,11 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: lightblue;
-  --bs-link-color-rgb: 173, 216, 230;
+  --bs-link-color: #0050DC;
+  --bs-link-color-rgb: 0, 80, 220;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #8aadb8;
-  --bs-link-hover-color-rgb: 138, 173, 184;
+  --bs-link-hover-color: #0040b0;
+  --bs-link-hover-color-rgb: 0, 64, 176;
   --bs-code-color: #d63384;
   --bs-highlight-color: #212529;
   --bs-highlight-bg: #fff3cd;
@@ -118,7 +118,7 @@
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
-  --bs-focus-ring-color: rgba(173, 216, 230, 0.25);
+  --bs-focus-ring-color: rgba(0, 80, 220, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
@@ -141,7 +141,7 @@
   --bs-tertiary-color-rgb: 222, 226, 230;
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
-  --bs-primary-text-emphasis: #cee8f0;
+  --bs-primary-text-emphasis: #6696ea;
   --bs-secondary-text-emphasis: #f2d06d;
   --bs-success-text-emphasis: #75b798;
   --bs-info-text-emphasis: #6edff6;
@@ -149,7 +149,7 @@
   --bs-danger-text-emphasis: #ea868f;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
-  --bs-primary-bg-subtle: #232b2e;
+  --bs-primary-bg-subtle: #00102c;
   --bs-secondary-bg-subtle: #2f2302;
   --bs-success-bg-subtle: #051b11;
   --bs-info-bg-subtle: #032830;
@@ -157,7 +157,7 @@
   --bs-danger-bg-subtle: #2c0b0e;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
-  --bs-primary-border-subtle: #68828a;
+  --bs-primary-border-subtle: #003084;
   --bs-secondary-border-subtle: #8c6a07;
   --bs-success-border-subtle: #0f5132;
   --bs-info-border-subtle: #087990;
@@ -166,10 +166,10 @@
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
-  --bs-link-color: #cee8f0;
-  --bs-link-hover-color: #d8edf3;
-  --bs-link-color-rgb: 206, 232, 240;
-  --bs-link-hover-color-rgb: 216, 237, 243;
+  --bs-link-color: #6696ea;
+  --bs-link-hover-color: #85abee;
+  --bs-link-color-rgb: 102, 150, 234;
+  --bs-link-hover-color-rgb: 133, 171, 238;
   --bs-code-color: #e685b5;
   --bs-highlight-color: #dee2e6;
   --bs-highlight-bg: #664d03;
@@ -483,6 +483,12 @@ select:disabled {
   display: none !important;
 }
 
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
 button:not(:disabled),
 [type=button]:not(:disabled),
 [type=reset]:not(:disabled),
@@ -538,6 +544,7 @@ legend + * {
 }
 
 [type=search] {
+  -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
@@ -555,6 +562,11 @@ legend + * {
 
 ::-webkit-color-swatch-wrapper {
   padding: 0;
+}
+
+::file-selector-button {
+  font: inherit;
+  -webkit-appearance: button;
 }
 
 output {
@@ -1920,13 +1932,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #eff7fa;
-  --bs-table-border-color: #bfc6c8;
-  --bs-table-striped-bg: #e3ebee;
+  --bs-table-bg: #ccdcf8;
+  --bs-table-border-color: #a3b0c6;
+  --bs-table-striped-bg: #c2d1ec;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #d7dee1;
+  --bs-table-active-bg: #b8c6df;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #dde4e7;
+  --bs-table-hover-bg: #bdcce5;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2126,9 +2138,9 @@ progress {
 .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
-  border-color: #d6ecf3;
+  border-color: #80a8ee;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
@@ -2277,9 +2289,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #d6ecf3;
+  border-color: #80a8ee;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2364,13 +2376,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #d6ecf3;
+  border-color: #80a8ee;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
 }
 .form-check-input:checked {
-  background-color: lightblue;
-  border-color: lightblue;
+  background-color: #0050DC;
+  border-color: #0050DC;
 }
 .form-check-input:checked[type=checkbox] {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2379,8 +2391,8 @@ textarea.form-control-lg {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: lightblue;
-  border-color: lightblue;
+  background-color: #0050DC;
+  border-color: #0050DC;
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2411,7 +2423,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23d6ecf3'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2380a8ee'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2459,10 +2471,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2473,7 +2485,7 @@ textarea.form-control-lg {
   margin-top: -0.25rem;
   -webkit-appearance: none;
           appearance: none;
-  background-color: lightblue;
+  background-color: #0050DC;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2486,7 +2498,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #e6f3f8;
+  background-color: #b3cbf5;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2502,7 +2514,7 @@ textarea.form-control-lg {
   height: 1rem;
   -moz-appearance: none;
        appearance: none;
-  background-color: lightblue;
+  background-color: #0050DC;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2515,7 +2527,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #e6f3f8;
+  background-color: #b3cbf5;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2998,20 +3010,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: lightblue;
-  --bs-btn-border-color: lightblue;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #b9deea;
-  --bs-btn-hover-border-color: #b5dce9;
-  --bs-btn-focus-shadow-rgb: 147, 184, 196;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #bde0eb;
-  --bs-btn-active-border-color: #b5dce9;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #0050DC;
+  --bs-btn-border-color: #0050DC;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #0044bb;
+  --bs-btn-hover-border-color: #0040b0;
+  --bs-btn-focus-shadow-rgb: 38, 106, 225;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #0040b0;
+  --bs-btn-active-border-color: #003ca5;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: lightblue;
-  --bs-btn-disabled-border-color: lightblue;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #0050DC;
+  --bs-btn-disabled-border-color: #0050DC;
 }
 
 .btn-secondary {
@@ -3134,19 +3146,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: lightblue;
-  --bs-btn-border-color: lightblue;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: lightblue;
-  --bs-btn-hover-border-color: lightblue;
-  --bs-btn-focus-shadow-rgb: 173, 216, 230;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: lightblue;
-  --bs-btn-active-border-color: lightblue;
+  --bs-btn-color: #0050DC;
+  --bs-btn-border-color: #0050DC;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #0050DC;
+  --bs-btn-hover-border-color: #0050DC;
+  --bs-btn-focus-shadow-rgb: 0, 80, 220;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #0050DC;
+  --bs-btn-active-border-color: #0050DC;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: lightblue;
+  --bs-btn-disabled-color: #0050DC;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: lightblue;
+  --bs-btn-disabled-border-color: #0050DC;
   --bs-gradient: none;
 }
 
@@ -3281,7 +3293,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 147, 184, 196;
+  --bs-btn-focus-shadow-rgb: 38, 106, 225;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3388,7 +3400,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: var(--bs-body-color);
   --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: lightblue;
+  --bs-dropdown-link-active-bg: #0050DC;
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3654,7 +3666,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: lightblue;
+  --bs-dropdown-link-active-bg: #0050DC;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3794,7 +3806,7 @@ textarea.form-control-lg {
 }
 .nav-link:focus-visible {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
 }
 .nav-link.disabled, .nav-link:disabled {
   color: var(--bs-nav-link-disabled-color);
@@ -3837,7 +3849,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: lightblue;
+  --bs-nav-pills-link-active-bg: #0050DC;
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -4524,8 +4536,8 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%2345565c' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23002058' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: var(--bs-primary-text-emphasis);
@@ -4642,8 +4654,8 @@ textarea.form-control-lg {
 }
 
 [data-bs-theme=dark] .accordion-button::after {
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23cee8f0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23cee8f0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%236696ea'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%236696ea'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 .breadcrumb {
@@ -4692,10 +4704,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: var(--bs-border-color);
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: var(--bs-secondary-bg);
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: lightblue;
-  --bs-pagination-active-border-color: lightblue;
+  --bs-pagination-active-bg: #0050DC;
+  --bs-pagination-active-border-color: #0050DC;
   --bs-pagination-disabled-color: var(--bs-secondary-color);
   --bs-pagination-disabled-bg: var(--bs-secondary-bg);
   --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -4907,7 +4919,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: var(--bs-border-radius);
   --bs-progress-box-shadow: var(--bs-box-shadow-inset);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: lightblue;
+  --bs-progress-bar-bg: #0050DC;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -4972,8 +4984,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: lightblue;
-  --bs-list-group-active-border-color: lightblue;
+  --bs-list-group-active-bg: #0050DC;
+  --bs-list-group-active-border-color: #0050DC;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -5304,7 +5316,7 @@ textarea.form-control-lg {
   --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   --bs-btn-close-opacity: 0.5;
   --bs-btn-close-hover-opacity: 0.75;
-  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(173, 216, 230, 0.25);
+  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(0, 80, 220, 0.25);
   --bs-btn-close-focus-opacity: 1;
   --bs-btn-close-disabled-opacity: 0.25;
   --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
@@ -6784,7 +6796,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #000 !important;
+  color: #fff !important;
   background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -6828,8 +6840,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: RGBA(189, 224, 235, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(189, 224, 235, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(0, 64, 176, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(0, 64, 176, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-secondary {
