--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,12 @@
 .table-shadow {
-    box-shadow: 5px 5px 0 #0050DC;
+    /* box-shadow: 5px 5px 0 #0050DC; */
+}
+
+.teste tr {
+    transition: all 0.3s;
+}
+
+.teste tr:hover {
+    transform: translate(-3px, -3px);
+    box-shadow: 3px 3px 0 #0050DC;
 }
