--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -2,10 +2,10 @@
 $font-family-sans-serif: 'Open Sans', sans-serif;
 
 // colors
-$primary: #0050DC;
-$secondary: #EAB00b;
-$dark: #2b3041;
-$light: #f3f6f9;
+$primary: rgb(0, 80, 220);
+$secondary: rgb(234, 176, 11);
+$dark: rgb(43, 48, 65);
+$light: rgb(243, 246, 249);
 
 // margin
 $enable-negative-margins: true;
