--- a/styles/global.css
+++ b/styles/global.css
@@ -27,3 +27,9 @@ a.selected {
     transform: translate(-3px, -3px);
     box-shadow: 3px 3px 0 rgba(0, 80, 220, 1);
 }
+
+.table-height {
+    height: 70vh;
+    overflow: auto;
+    padding-left: 5px;
+}
