foi feito o registro de saída, porém ainda falta puxar o nome dos clientes via ID

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -3,8 +3,8 @@ $font-family-sans-serif: 'Open Sans', sans-serif;
 
 // colors
 $primary: rgb(0, 80, 220);
-$secondary: rgb(234, 176, 11);
-$dark: rgb(43, 48, 65);
+$secondary: #eab00b;
+$dark: #2b3041;
 $light: rgb(243, 246, 249);
 
 // margin
