--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@ a.selected {
     border-radius: 12px 7px;
     border: 1px solid rgba(0, 0, 0, 0.15);
     box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.5);
-    background-color: rgba(0, 80, 220, 1);
+    background-color: #0050dc;
 }
 
 /* TABLE STYLES */
