Criando efeito de hover nos botões de ordenação da tela de estoque

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -2,10 +2,10 @@
 $font-family-sans-serif: 'Open Sans', sans-serif;
 
 // colors
-$primary: rgb(0, 80, 220);
+$primary: #0050dc;
 $secondary: #eab00b;
 $dark: #2b3041;
-$light: rgb(243, 246, 249);
+$light: #f3f6f9;
 
 // margin
 $enable-negative-margins: true;
