--- a/styles/global.css
+++ b/styles/global.css
@@ -33,3 +33,11 @@ a.selected {
     overflow: auto;
     padding-left: 5px;
 }
+
+/* ORDER BUTTON STYLES */
+.order-hover:hover {
+    cursor: pointer;
+    transition: all 0.5s;
+    transform: scale(1.3);
+    color: #eab00b;
+}
