--- a/styles/global.css
+++ b/styles/global.css
@@ -12,9 +12,9 @@
 }
 
 a.selected {
-    border-radius: 12px 7px;
+    border-radius: 10px 10px;
     border: 1px solid rgba(0, 0, 0, 0.15);
-    box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
     background-color: rgba(0, 80, 220, 1);
 }
 
